language_tests/source_files/valid/closure_fn_simple.tr
// Simplest possible test for Fn trait bounds

func apply[F: Fn[int32, int32]](_ f: F, _ x: int32) -> int32 {
    f(x)
}

func main() {
    std.print("calling apply...\n")
    let result = apply(|x: int32| -> int32 { x * 2 }, 5)
    std.assert(result == 10, "should be 10")
    std.print("closure_fn_simple: PASSED\n")
}
